# catch2VecCompare

./: .gitignore  CMakeLists.txt  testCase.cpp
